Tidy up judgements section

--- a/preamble.tex
+++ b/preamble.tex
@@ -143,7 +143,11 @@
 \newcommand*{\badset}{\psi_\mathbf{b}}
 \newcommand*{\wonkyset}{\psi_\mathbf{w}}
 \newcommand*{\punishset}{\psi_\mathbf{p}}
-
+\newcommand*{\xttickets}{\mathbf{E}_T}
+\newcommand*{\xtdisputes}{\mathbf{E}_D}
+\newcommand*{\xtguarantees}{\mathbf{E}_G}
+\newcommand*{\xtassurances}{\mathbf{E}_A}
+\newcommand*{\xtpreimages}{\mathbf{E}_P}
 
 \title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft 0.3.0+changes \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft 0.3.0+changes \today}}
 \author{
