--- a/text/guaranteeing.tex
+++ b/text/guaranteeing.tex
@@ -1,6 +1,6 @@
 \section{Guaranteeing}\label{sec:guaranteeing}
 
-Guaranteeing work-packages involves the creation and distribution of a corresponding \emph{work-report} which requires certain conditions to be met. Along with the report, a signature demonstrating the validator's commitment to its correctness is needed. With two guarantor signatures, the work-report may be distributed to the forthcoming \Jam chain block author in order to be used in the $\mathbf{E}_G$, which leads to a reward for the guarantors.
+Guaranteeing work-packages involves the creation and distribution of a corresponding \emph{work-report} which requires certain conditions to be met. Along with the report, a signature demonstrating the validator's commitment to its correctness is needed. With two guarantor signatures, the work-report may be distributed to the forthcoming \Jam chain block author in order to be used in the $\xtguarantees$, which leads to a reward for the guarantors.
 
 We presume that in a public system, validators will be punished severely if they malfunction and commit to a report which does not faithfully represent the result of $\Xi$ applied on a work-package. Overall, the process is:
 
