--- a/text/ratings.tex
+++ b/text/ratings.tex
@@ -40,19 +40,19 @@ The objective statistics are updated in line with their description, formally:
     \forall v \in \N_\mathsf{V} :&\; \left\{\begin{aligned}
         \pi'_0[v]_b &\equiv \mathbf{a}[v]_b + (v = \mathbf{H}_a)\\
         \pi'_0[v]_t &\equiv \mathbf{a}[v]_t + \begin{cases}
-            |\mathbf{E}_T| &\when v = \mathbf{H}_a \\
+            |\xttickets| &\when v = \mathbf{H}_a \\
             0 &\otherwise
         \end{cases}\\
         \pi'_0[v]_p &\equiv \mathbf{a}[v]_p + \begin{cases}
-            |\mathbf{E}_P| &\when v = \mathbf{H}_a \\
+            |\xtpreimages| &\when v = \mathbf{H}_a \\
             0 &\otherwise
         \end{cases}\\
         \pi'_0[v]_d &\equiv \mathbf{a}[v]_d + \begin{cases}
-            \sum_{d \in \mathbf{E}_P}|d| &\when v = \mathbf{H}_a \\
+            \sum_{d \in \xtpreimages}|d| &\when v = \mathbf{H}_a \\
             0 &\otherwise
         \end{cases}\\
         \pi'_0[v]_g &\equiv \mathbf{a}[v]_g + (\kappa_v \in \mathbf{R})\\
-        \pi'_0[v]_a &\equiv \mathbf{a}[v]_a + (\exists a \in \mathbf{E}_A : a_v = v)
+        \pi'_0[v]_a &\equiv \mathbf{a}[v]_a + (\exists a \in \xtassurances : a_v = v)
     \end{aligned}\right.
 \end{align}
 
