--- a/text/judgements.tex
+++ b/text/judgements.tex
@@ -1,40 +1,47 @@
-\section{Verdicts}\label{sec:verdicts}
+\section{Disputes, Verdicts and Judgements}\label{sec:disputes}
 
-\Jam provides a means of recording a vote amongst all validators over the validity of a \emph{work-report}, a unit of work done within \Jam (for greater detail on the nature of a work-report, see section \ref{sec:reporting}) as well as recording dissent with an established verdict on the validity of work-report. Such a vote is not expected to happen very often in practice (if at all), however it is an important security backstop, allowing a convenient manner of removing troublesome keys from the validator set at short notice where there is consensus over their malfunction. It also helps coordinate the ability of unfinalized chain-extensions to be reverted and replaced with an extension which does not contain some invalid work-report.
+\newcommand*{\verdicts}{\mathbf{V}}
+\newcommand*{\xtverdicts}{\mathbf{v}}
+\newcommand*{\xtculprits}{\mathbf{c}}
+\newcommand*{\xtfaults}{\mathbf{f}}
 
-Judgement statements come about as a result of an auditor finding that a guaranteed work-report is invalid. Auditing and guaranteeing are off-chain processes described in sections \ref{sec:workpackagesandworkreports} and \ref{sec:auditing}. A judgement against a report will imply that the chain will have been reverted to some point prior to the accumulation of said report. Placing the judgement on-chain has the effect of cancelling its imminent accumulation. The specific strategy for chain selection is described fully in section \ref{sec:bestchain}.
+\Jam provides a means of recording \emph{judgements}: consequential votes amongst most of the validators over the validity of a \emph{work-report} (a unit of work done within \Jam, see section \ref{sec:reporting}). Such collections of judgements are known as \emph{verdicts}. \Jam also provides a means of registering \emph{offenses}, judgements and guarantees which dissent with an established \emph{verdict}. Together these form the \emph{disputes} system.
 
-Once a sufficient number of validator nodes each issue a judgement on some work-report then a \emph{verdict}, an item in $\mathbf{E}_V$, may be created. This has the effect of placing a permanent record of the event on-chain and allow any offending validators Ed25519 keys to be placed on-chain immediately or in forthcoming blocks, again for permanent record.
+The registration of a verdict is not expected to happen very often in practice, however it is an important security backstop for removing and banning invalid work-reports from the processing pipeline as well as removing troublesome keys from the validator set where there is consensus over their malfunction. It also helps coordinate nodes to revert chain-extensions containing invalid work-reports and provides a convenient means of aggregating all offending validators for punishment in a higher-level system.
 
-Having a persistent on-chain record of misbehavior is helpful in a number of ways. Firstly it provides a very simple means of recognizing the circumstances under which action against a validator must be taken by any higher-level validator-selection logic. Should \Jam be used for a public network such as \emph{Polkadot}, this would imply the slashing of the offending validator's stake on the staking parachain.
+Judgement statements come about naturally as part of the auditing process and are expected to be positive, further affirming the guarantors' assertion that the work-report is valid. In the event of a negative judgement, then all validators audit said work-report and we assume a verdict will be reached. Auditing and guaranteeing are off-chain processes properly described in sections \ref{sec:workpackagesandworkreports} and \ref{sec:auditing}.
+
+A judgement against a report implies that the chain is already reverted to some point prior to the accumulation of said report, usually forking at the block immediately prior to that at which accumulation happened. The specific strategy for chain selection is described fully in section \ref{sec:bestchain}. Authoring a block with a non-positive verdict has the effect of cancelling its imminent accumulation, as can be seen in equation \ref{eq:removenonpositive}.
+
+Registering a verdict also has the effect of placing a permanent record of the event on-chain and allowing any offending keys to be placed on-chain both immediately or in forthcoming blocks, again for permanent record.
+
+Having a persistent on-chain record of misbehavior is helpful in a number of ways. It provides a very simple means of recognizing the circumstances under which action against a validator must be taken by any higher-level validator-selection logic. Should \Jam be used for a public network such as \emph{Polkadot}, this would imply the slashing of the offending validator's stake on the staking parachain.
 
 As mentioned, recording reports found to have a high confidence of invalidity is important to ensure that said reports are not allowed to be resubmitted. Conversely, recording reports found to be valid ensures that additional disputes cannot be raised in the future of the chain.
 
-\subsection{The Good, the Bad and the Wonky}
+\subsection{The State}
 
-The verdicts state includes four items, a good-set ($\goodset$), a bad-set ($\badset$) and a wonky-set ($\wonkyset$), as well as a punish-set ($\punishset$). The good-set, bad-set and wonky-set contains the hashes of all work-reports which were respectively judged to be correct, incorrect or that it appears impossible to judge. The punish-set is a set of Ed25519 keys representing validators which were found to have misjudged a work-report.
+The \emph{disputes} state includes four items, three of which concern verdicts: a good-set ($\goodset$), a bad-set ($\badset$) and a wonky-set ($\wonkyset$) containing the hashes of all work-reports which were respectively judged to be correct, incorrect or that it appears impossible to judge. The fourth item, the punish-set ($\punishset$), is a set of Ed25519 keys representing validators which were found to have misjudged a work-report.
 \begin{equation}
   \psi \equiv \tup{\goodset, \badset, \wonkyset, \punishset}
 \end{equation}
 
 \subsection{Extrinsic}
 
-\newcommand*{\verdicts}{\mathbf{v}}
-
-The verdict extrinsic, $\mathbf{E}_V$ may contain one or more verdicts $\mathbf{v}$ as a compilation of signed judgements coming from exactly two-thirds plus one of either the active validator set or the previous epoch's validator set, \ie the Ed25519 keys of $\kappa$ or $\lambda$. Additionally, it may contain proofs of the misbehavior of one or more validators, either by guaranteeing a work-report found to be invalid in the sequence of culprits $\mathbf{c}$, or by signing a judgement (\ie audit result) found to be contradiction to a work-report's validity in the sequence of faults $\mathbf{f}$. Formally:
+The disputes extrinsic, $\xtdisputes$, may contain one or more verdicts $\xtverdicts$ as a compilation of judgements coming from exactly two-thirds plus one of either the active validator set or the previous epoch's validator set, \ie the Ed25519 keys of $\kappa$ or $\lambda$. Additionally, it may contain proofs of the misbehavior of one or more validators, either by guaranteeing a work-report found to be invalid (\emph{culprits}, $\xtculprits$), or by signing a judgement found to be contradiction to a work-report's validity (\emph{faults}, $\xtfaults$). Both are considered a kind of \emph{offense}. Formally:
 \begin{equation}
   \begin{aligned}
-    \mathbf{E}_V &\equiv (\mathbf{v}, \mathbf{c}, \mathbf{f}) \\
-    \where \mathbf{v} &\in \seq{\tup{\H, \ffrac{\tau}{\mathsf{E}} - \N_2, \seq{\tup{\{\top, \bot\}, \N_{\mathsf{V}}, \mathbb{E}}}_{\floor{\nicefrac{2}{3}\mathsf{V}} + 1}}}\\
-    \also \mathbf{c} &\in \seq{\H, \H_E, \mathbb{E}} \,,\quad
-    \mathbf{f} \in \seq{\H, \{\top,\bot\}, \H_E, \mathbb{E}}
+    \xtdisputes &\equiv (\xtverdicts, \xtculprits, \xtfaults) \\
+    \where \xtverdicts &\in \seq{\tup{\H, \ffrac{\tau}{\mathsf{E}} - \N_2, \seq{\tup{\{\top, \bot\}, \N_{\mathsf{V}}, \mathbb{E}}}_{\floor{\nicefrac{2}{3}\mathsf{V}} + 1}}}\\
+    \also \xtculprits &\in \seq{\H, \H_E, \mathbb{E}} \,,\quad
+    \xtfaults \in \seq{\H, \{\top,\bot\}, \H_E, \mathbb{E}}
   \end{aligned}
 \end{equation}
 
-All judgement signatures must be valid in terms of one of the two allowed validator key-sets, identified by the second term which must be either the epoch index of the prior state or one less. Formally:
+The signatures of all judgements must be valid in terms of one of the two allowed validator key-sets, identified by the verdict's second term which must be either the epoch index of the prior state or one less. Formally:
 \begin{align}
   &\begin{aligned}
-    &\forall (r, a, \mathbf{v}) \in \mathbf{v}, \forall (v, i, s) \in \mathbf{v} : s \in \sig{\mathbf{k}[i]_e}{\mathsf{X}_v \concat r}\\
+    &\forall (r, a, \mathbf{j}) \in \xtverdicts, \forall (v, i, s) \in \mathbf{j} : s \in \sig{\mathbf{k}[i]_e}{\mathsf{X}_v \concat r}\\
     &\quad\where \mathbf{k} = \begin{cases}
       \kappa &\when a = \displaystyle \ffrac{\tau}{\mathsf{E}}\\
       \lambda &\otherwise\\
@@ -43,68 +50,66 @@ All judgement signatures must be valid in terms of one of the two allowed valida
   &\mathsf{X}_\top \equiv \text{{\small \texttt{\$jam\_valid}}}\,,\ \mathsf{X}_\bot \equiv \text{{\small \texttt{\$jam\_invalid}}}
 \end{align}
 
-Culprit and fault signatures must be similarly valid and reference work-reports with judgements and may not report targets which are already in the punish-set:
+Offender signatures must be similarly valid and reference work-reports with judgements and may not report keys which are already in the punish-set:
 \begin{align}
-  \forall (r, k, s) &\in \mathbf{c} : \bigwedge \left\{
+  \forall (r, k, s) &\in \xtculprits : \bigwedge \left\{
   \begin{aligned}
     &r \in \badset' \,,\\
     &k \in (\lambda \cup \kappa) \setminus \punishset \,,\\
     &s \in \sig{k}{\mathsf{X}_G \frown r}
   \end{aligned}\right.\\
-  \forall (r, v, k, s) &\in \mathbf{f} : \bigwedge \left\{ \begin{aligned}
+  \forall (r, v, k, s) &\in \xtfaults : \bigwedge \left\{ \begin{aligned}
     &r \in \badset' \Leftrightarrow r \not\in \goodset' \Leftrightarrow v \,,\\
     &k \in (\lambda \cup \kappa) \setminus \punishset \,,\\
     &s \in \sig{k}{\mathsf{X}_v \concat r}\\
   \end{aligned}\right.
 \end{align}
 
-Verdicts $\mathbf{v}$ must be ordered by report hash. Offender signatures $\mathbf{c}$ and $\mathbf{f}$ must be ordered by the validator's Ed25519 key. There may be no duplicate report hashes within the extrinsic, nor amongst any past reported hashes. Formally:
+Verdicts $\xtverdicts$ must be ordered by report hash. Offender signatures $\xtculprits$ and $\xtfaults$ must each be ordered by the validator's Ed25519 key. There may be no duplicate report hashes within the extrinsic, nor amongst any past reported hashes. Formally:
 \begin{align}
-  &\mathbf{v} = \orderuniqby{r}{\tup{r, a, \mathbf{v}} \in \mathbf{v}}\\
-  &\mathbf{c} = \orderuniqby{k}{\tup{r, k, s} \in \mathbf{v}} \,,\quad
-  \mathbf{f} = \orderuniqby{k}{\tup{r, v, k, s} \in \mathbf{v}}\\
-  &\{r \mid \tup{r, a, \mathbf{v}} \in \mathbf{v}\} \disjoint \goodset \cup \badset \cup \wonkyset
+  &\xtverdicts = \orderuniqby{r}{\tup{r, a, \mathbf{j}} \in \xtverdicts}\\
+  &\xtculprits = \orderuniqby{k}{\tup{r, k, s} \in \xtculprits} \,,\quad
+  \xtfaults = \orderuniqby{k}{\tup{r, v, k, s} \in \xtfaults}\\
+  &\{r \mid \tup{r, a, \mathbf{j}} \in \xtverdicts\} \disjoint \goodset \cup \badset \cup \wonkyset
 \end{align}
 
-The judgement statements of all verdicts must be ordered by validator index and there may be no duplicate such indices. Formally:
+The judgements of all verdicts must be ordered by validator index and there may be no duplicates:
 \begin{equation}
-  \forall (r, a, \mathbf{v}) \in \mathbf{v} : \mathbf{v} = \orderuniqby{i}{\tup{v, i, s} \in \mathbf{v}}
+  \forall (r, a, \mathbf{j}) \in \xtverdicts : \mathbf{j} = \orderuniqby{i}{\tup{v, i, s} \in \mathbf{j}}
 \end{equation}
 
-We define $\mathbf{J}$ as the sequence of verdicts introduced in the block's extrinsic (and ordered respectively), with the sequence of signatures substituted with the sum of votes over the signatures. We require this total to be exactly two-thirds-plus-one, zero or one-third of the validator set indicating, respectively, that we are confident of the report's validity (it's good), confident of its invalidity (it's bad), or lacking confidence in either (it's wonky). This requirement may seem somewhat arbitrary, but these happen to be the decision thresholds for our three possible actions and are acceptable since the security assumptions include the requirement that at least two-thirds-plus-one validators are live (\cite{cryptoeprint:2024/961} discusses the security implications in depth). Formally:
+
+We define $\verdicts$ to derive from the sequence of verdicts introduced in the block's extrinsic, containing only the report hash and the sum of positive judgements. We require this total to be either exactly two-thirds-plus-one, zero or one-third of the validator set indicating, respectively, that the report is good, that it's bad, or that it's wonky.\footnote{This requirement may seem somewhat arbitrary, but these happen to be the decision thresholds for our three possible actions and are acceptable since the security assumptions include the requirement that at least two-thirds-plus-one validators are live (\cite{cryptoeprint:2024/961} discusses the security implications in depth).} Formally:
 \begin{align}
-  \mathbf{J} &\in \seq{\tup{\H, \N}} \\
-  \mathbf{J} &= \sq{\tup{r, \sum_{\tup{v, i, s} \in \mathbf{v}}\!\!\!\! v}\ \middle\mid\ \tup{r, a, \mathbf{v}} \orderedin \mathbf{v}} \\
-  &\forall \tup{r, t} \in \mathbf{J} : t \in \{0, \floor{\nicefrac{1}{3}\mathsf{V}}, \floor{\nicefrac{2}{3}\mathsf{V}} + 1 \}
+  \verdicts &\in \seq{\tup{\H, \{0, \floor{\nicefrac{1}{3}\mathsf{V}}, \floor{\nicefrac{2}{3}\mathsf{V}} + 1\}}} \\
+  \verdicts &= \sq{\tup{r, \sum_{\tup{v, i, s} \in \mathbf{j}}\!\!\!\! v}\ \middle\mid\ \tup{r, a, \mathbf{j}} \orderedin \xtverdicts}
 \end{align}
 
-Note that $t$ is the threshold of judgements that the report is \emph{valid}, calculated by summing Boolean values in their implicit equivalence to binary digits of the set $\N_2$.
-
-There are some constraints placed on the composition of this extrinsic: any verdict containing solely valid judgements implies the same report having at least one valid entry in the faults sequence $\mathbf{f}$. Any verdict containing solely invalid judgements implies the same report having at least two valid entries in the culprits sequence $\mathbf{c}$. Formally:
+There are some constraints placed on the composition of this extrinsic: any verdict containing solely valid judgements implies the same report having at least one valid entry in the faults sequence $\xtfaults$. Any verdict containing solely invalid judgements implies the same report having at least two valid entries in the culprits sequence $\xtculprits$. Formally:
 \begin{align}
-  \forall (r, \floor{\nicefrac{2}{3}\mathsf{V}} + 1) \in \mathbf{J} &: \exists (r, \dots) \in \mathbf{f} \\
-  \forall (r, 0) \in \mathbf{J} &: |\{(r, \dots) \in \mathbf{c}\}| \ge 2
+  \forall (r, \floor{\nicefrac{2}{3}\mathsf{V}} + 1) \in \verdicts &: \exists (r, \dots) \in \xtfaults \\
+  \forall (r, 0) \in \verdicts &: |\{(r, \dots) \in \xtculprits\}| \ge 2
 \end{align}
 
 We clear any work-reports which we judged as uncertain or invalid from their core:
-\begin{equation}
+\begin{equation}\label{eq:removenonpositive}
   \forall c \in \N_\mathsf{C} : \rho^\dagger[c] = \begin{cases}
-    \none &\when \{ (\rho[c]_r, t) \in \mathbf{J}, t < \floor{\nicefrac{2}{3}\mathsf{V}} \} \\
+    \none &\when \{ (\rho[c]_r, t) \in \verdicts, t < \floor{\nicefrac{2}{3}\mathsf{V}} \} \\
     \rho_c &\otherwise
   \end{cases}
 \end{equation}
 
-The good-set, bad-set and wonky-set assimilate the hashes of any reports we judge to be valid, invalid or uncertain. Finally, the punish-set accumulates the keys of any validators who have found to have misjudged a report. Formally:
+The state's good-set, bad-set and wonky-set assimilate the hashes of the reports from each verdict. Finally, the punish-set accumulates the keys of any validators who have been found guilty of offending. Formally:
 \begin{align}
-  \goodset' &\equiv \goodset \cup \{r \mid \tup{r, \floor{\nicefrac{2}{3}\mathsf{V}} + 1} \in \mathbf{J} \} \\
-  \badset' &\equiv \badset \cup \{r \mid \tup{r, 0} \in \mathbf{J} \} \\
-  \wonkyset' &\equiv \wonkyset \cup \{r \mid \tup{r, \floor{\nicefrac{1}{3}\mathsf{V}}} \in \mathbf{J} \} \\
-  \punishset' &\equiv \punishset \cup \{ k \mid (r, k, s) \in \mathbf{c} \}\cup \{ k \mid (r, v, k, s) \in \mathbf{f} \}
+  \goodset' &\equiv \goodset \cup \{r \mid \tup{r, \floor{\nicefrac{2}{3}\mathsf{V}} + 1} \in \verdicts \} \\
+  \badset' &\equiv \badset \cup \{r \mid \tup{r, 0} \in \verdicts \} \\
+  \wonkyset' &\equiv \wonkyset \cup \{r \mid \tup{r, \floor{\nicefrac{1}{3}\mathsf{V}}} \in \verdicts \} \\
+  \punishset' &\equiv \punishset \cup \{ k \mid (r, k, s) \in \xtculprits \}\cup \{ k \mid (r, v, k, s) \in \xtfaults \}
 \end{align}
 
 \subsection{Header}\label{sec:judgementmarker}
 
-The judgement marker must contain exactly the sequence of report hashes judged not as confidently valid (\ie either controversial or invalid). Formally:
+The judgement marker must contain exactly the sequence of report hashes of all bad and wonky verdicts:
 \begin{equation}
-  \mathbf{H}_j \equiv \sq{r \mid \tup{r, t} \orderedin \mathbf{J}, t \ne \floor{\nicefrac{2}{3}\mathsf{V}} + 1}
+  \mathbf{H}_j \equiv \sq{r \mid \tup{r, t} \orderedin \verdicts, t \ne \floor{\nicefrac{2}{3}\mathsf{V}} + 1}
 \end{equation}
