More posterior keys

--- a/text/auditing.tex
+++ b/text/auditing.tex
@@ -1,6 +1,6 @@
 \section{Auditing and Judging}\label{sec:auditing}
 
-The auditing and judging system is theoretically equivalent to that in \textsc{Elves}, introduced by \cite{cryptoeprint:2024/961}. For a full security analysis of the mechanism, see this work. There is a difference in terminology, where the terms \emph{backing} and \emph{approval} there refer to our guaranteeing and auditing, respectively.
+The auditing and judging system is theoretically equivalent to that in \textsc{Elves}, introduced by \cite{cryptoeprint:2024/961}. For a full security analysis of the mechanism, see this work. There is a difference in terminology, where the terms \emph{backing}, \emph{approval} and \emph{inclusion} there refer to our guaranteeing, auditing and accumulation, respectively.
 
 %The main point of divergence is in \Jam extending the utility of the availability system so that it does not simply serve auditing, but also allows data intentionally created as a side effect within a core to be utilized at some later stage without the requirement to re-insert it into the availability system. This creates additional bandwidth \emph{in to} the availability system for the importing of more such data. To maximize the value of this alteration, the expiry time of data entering the availability system is extended well beyond that which is needed for auditing, to 28 days.
 
