--- a/text/ratings.tex
+++ b/text/ratings.tex
@@ -51,7 +51,7 @@ The objective statistics are updated in line with their description, formally:
             \sum_{d \in \xtpreimages}|d| &\when v = \mathbf{H}_a \\
             0 &\otherwise
         \end{cases}\\
-        \pi'_0[v]_g &\equiv \mathbf{a}[v]_g + (\kappa_v \in \mathbf{R})\\
+        \pi'_0[v]_g &\equiv \mathbf{a}[v]_g + (\kappa'_v \in \mathbf{R})\\
         \pi'_0[v]_a &\equiv \mathbf{a}[v]_a + (\exists a \in \xtassurances : a_v = v)
     \end{aligned}\right.
 \end{align}
